Fixed a bug that literally ruins the game and adjusted line spacings

--- a/style.css
+++ b/style.css
@@ -26,14 +26,15 @@ canvas {
   font-size: 20px;
   font-family: 'Poppins', sans-serif;
   width: 350px;
+  line-height: 1.2;
 }
 
 #sidebar h1 {
-  margin-top: 0;
+  margin: 0 0 10px 0;
 }
 
 #sidebar h2 {
-  margin-top: 30px;
+  margin: 20px 0 5px 0;
 }
 
 
@@ -41,6 +42,7 @@ canvas {
   display: flex;
   gap: 20px;
   margin-top: 20px;
+  margin-bottom: 35px;
 }
 
 button {
